<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TripAddingActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayoutAdd"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageViewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="fitXY"
        android:src="@drawable/main_background"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addTitle"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        app:fontWeight="700"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="2"/>

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/labelBegin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beginning_of_the_trip"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/countrySpinner"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="2"
        />

    <EditText
        android:id="@+id/editBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelBegin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no"
        android:hint="@string/date_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="2"/>

    <TextView
        android:id="@+id/labelEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_of_the_trip"
        android:layout_marginTop="16dp"
        android:layout_below="@id/editBeginDate"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="2"
        />

    <EditText
        android:id="@+id/editEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelEnd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:minHeight="48dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:importantForAutofill="no"
        android:hint="@string/date_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="2"
        android:shadowRadius="2"/>

    <ImageView
        app:srcCompat="@drawable/iceland"
        android:id="@+id/imagePreview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/editEndDate"
        android:layout_marginTop="32dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_preview"
        />

    <Button
        android:id="@+id/validateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/validateAdd"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_700"
        />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/button_for_closing_the_page"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:srcCompat="@drawable/ic_close" />

</RelativeLayout>