<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_columnWeight="0.5"
>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/black_low_opacity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/cardview_default_radius">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:alpha="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:id="@+id/plusButtonContainer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_day_of_trip"
                android:layout_gravity="center"
                android:layout_marginTop="32dp">
            </TextView>

            <ImageView
                android:id="@+id/plusDay"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/ic_add"
                android:layout_gravity="center"
                android:alpha="1"
                android:background="@color/teal_200"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_transportation"
                android:layout_gravity="center">
            </TextView>

            <ImageView
                android:id="@+id/plusTrip"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:src="@drawable/ic_add"
                android:layout_gravity="center"
                android:alpha="1"
                android:background="@color/purple_200"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                />
        </LinearLayout>


        <TextView
            android:id="@+id/dayNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:alpha="1"
            android:textSize="24sp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="2"
            android:shadowRadius="4"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"/>

        <ImageButton
            android:id="@+id/delete_day"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="0dp"
            android:alpha="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_remove"
            android:contentDescription="@string/button_for_removing_day"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>